# make-clinical-dataset

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
config/: default.yaml
epic/notebooks/: EDA_acu.ipynb  EDA_basic.ipynb  EDA_esas.ipynb  EDA_final.ipynb  EDA_lab.ipynb  EDA_notes.ipynb  EDA_radiology.ipynb  EDA_trt.ipynb  Embeddings.ipynb  Preprocess.ipynb
epic/prompts/: ed_risk_summarizer.txt
epic/scripts/: ask_groq.py  build.py  curate_procs.py  process.py  process_therapies.py  separate.py  unify.py
epic/src/: combine.py  label.py  util.py
epic/src/preprocess/: acu.py  clinic.py  demographic.py  esas.py  lab.py  radiology.py  treatment.py
epic/test/: util.py
epr/notebooks/: EDA.ipynb  Preprocess.ipynb
epr/scripts/: build.py  csv_to_parquet.py  unify.py
epr/src/: combine.py  engineer.py  filter.py  label.py  prep.py  util.py
epr/src/preprocess/: cancer_registry.py  clinic.py  dart.py  emergency.py  lab.py  opis.py  radiology.py  recist.py
epr/test/: test_label.py  test_scripts.py
notebooks/: 2. Preprocess.ipynb
notebooks/EPR/: Preprocess.ipynb
notebooks/epic/: EDA_basic.ipynb  EDA_esas.ipynb  EDA_lab.ipynb  EDA_radiology.ipynb  EDA_trt.ipynb  Preprocess.ipynb
notebooks/epr/: EDA.ipynb  Preprocess.ipynb
scripts/: build.py  build_features.py  combine_features.py  csv_to_parquet.py  last_seen.py  unify.py
scripts/EPIC/: curate_procs.py  separate.py
scripts/epic/: ask_groq.py  build.py  curate_procs.py  process_therapies.py  separate.py
scripts/epr/: build.py  csv_to_parquet.py
shared/: __init__.py  constants.py  model.py
src/: __init__.py  combine.py  constants.py  feat_eng.py  label.py  model.py  util.py
src/EPR/: label.py  util.py
src/EPR/preprocess/: cancer_registry.py  clinic.py  dart.py  emergency.py  recist.py
src/preprocess/: cancer_registry.py  clinic.py  clinic_notes.py  dart.py  emergency.py  lab.py  opis.py  radiology.py
src/preprocess/epic/: esas.py  lab.py  (+2 more)
test/: test.py  test_label.py  test_order.py  test_scripts.py  util.py
(+8 files in other folders)
