[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "make_clinical_dataset"
description = "Generate clinical dataset from patients treated at Princess Margaret Cancer Center"
version = "0.2.0"
authors = [
    { name = "Kevin He", email = "Kevin.He@uhn.ca" }
]
dependencies = [
    "ml_common @ git+https://github.com/ml4oncology/ml-common.git@v0.1.1",
    "tqdm",
    "dotenv",
    "groq",
    "pandas", 
    "polars",
    "pyarrow",
    "pyyaml",
    "pytest",
    "pytest-xdist",
    "nbstripout"
]

[tool.setuptools]
package-dir = {"make_clinical_dataset" = "src"}