[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "make_clinical_dataset"
description = "Generate clinical dataset from patients treated at Princess Margaret Cancer Center"
version = "2.0.0"
authors = [
    { name = "Kevin He", email = "Kevin.He@uhn.ca" }
]
dependencies = [
    "ml_common @ git+https://github.com/ml4oncology/ml-common.git@v2.0.1",
    "tqdm",
    "dotenv",
    "groq",
    "pandas", 
    "polars",
    "pyarrow",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "nbstripout",
    "pytest",
    "pytest-xdist",
]

[tool.setuptools.package-dir]
"make_clinical_dataset.epic" = "epic/src"
"make_clinical_dataset.epr" = "epr/src"
"make_clinical_dataset.shared" = "shared"